# zinshtein_mysql

./: CMakeLists.txt  algo.cpp  algo.h  ertranslit.cpp  ertranslit.h  library.cpp
cmake-modules/: FindMYSQL.cmake
